--- a/assets/css/scss/_archive_row.scss
+++ b/assets/css/scss/_archive_row.scss
@@ -13,6 +13,10 @@
 			padding-left: 20px;
 
 			.business-details {
+				@media screen and (max-width: $mobile_width) {
+					padding-left: 20px;
+				}
+
 				h4.business-title {
 					color: $title_color;
 					margin-top: 13px;
